@@ -1,3 +1,9 @@
+2004-07-23 Paul Jakma <paul@dishone.st>
+
+	* irdp_main.c: use setsockopt_pktinfo_ipv4
+	* irdp_packet.c: use SOPT_SIZE_CMSG_PKTINFO_IPV4 and 
+	  getsockopt_pktinfo_ifindex()
+
 2004-07-13  David Wiggins <dwiggins@bbn.com
 
 	* kernel_socket.c (rtm_flag_dump): terminate buffer with '\0', not '0'.
